--- a/home.html
+++ b/home.html
@@ -40,16 +40,22 @@
     crossorigin="anonymous" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm pt-navbar px-14 fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#main">
-            <img src="./asset/image/logo.png" alt="" width="100" height="34" class="logo d-inline-block align-text-top">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav gap-3">
+    <nav class="navbar navbar-expand-md pt-navbar px-14 fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#main">
+          <img src="./asset/image/logo.png" alt="" class="logo d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+          aria-controls="offcanvasRight" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+          <div class="offcanvas-header d-md-none">
+            <h5 class="offcanvas-title" id="offcanvasRightLabel">BCR</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav ms-auto gap-2">
               <li class="nav-item">
                 <a class="nav-link active text-r-14" href="#our-services">Our Services</a>
               </li>
@@ -68,23 +74,22 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
 
       <section id="main" class="main-section pl-14">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-6 main-text-container">
+            <div class="col-12 col-md-6 main-text-container">
               <p class="text-b-36">Sewa &amp; Rental Mobil Terbaik di kawasan &#40;Lokasimu&#41;</p>
               <p class="text-l-14">Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan
                 harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
               <button type="button" class="btn btn-register text-b-14">Mulai Sewa Mobil</button>
               
             </div>
-            <div class="col-6 main-img-container">
+            <div class="col-12 col-md-6 main-img-container">
               <div class="car-bg">
-                <figure class="figure">
-                  <img src="asset/image/Mercedes Car EQC 300kW Edition - 900x598 1.png" class="car-img figure-img img-fluid" preserveAspectRatio="xMidYMid slice">
-                </figure>
+                <img src="asset/image/Mercedes Car EQC 300kW Edition - 900x598 1.png" class="car-img figure-img img-fluid">
               </div>
             </div>
           </div>
@@ -94,10 +99,10 @@
       <section id="our-services">
         <div class="container-fluid">
           <div class="row">
-            <div class="col our-services-img-container">
-              <img src="./asset/image/img_service.png" alt="">
+            <div class="col-12 col-md-6 our-services-img-container">
+              <img src="asset/image/img_service.png" alt="" class="img-fluid our-services-img">
             </div>
-            <div class="col our-services-text-container">
+            <div class="col-12 col-md-6 our-services-text-container">
               <p class="text-b-24">Best Car Rental for any kind of trip in &#40;Lokasimu&#41;!</p>
               <p class="text-l-14">
                 Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain,
@@ -129,7 +134,7 @@
             </div>
           </div>
           <div class="row">
-              <div class="col-3">
+              <div class="col-md-3">
                 <div class="card" data-aos="flip-left">
                   <div class="card-body mx-2 mt-2">
                     <p><img src="./asset/image/thumbs_up-icon.png" class="thumbs-up-icon"></p>
@@ -138,7 +143,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-md-3">
                 <div class="card" data-aos="flip-left">
                   <div class="card-body mx-2 mt-2">
                     <p><img src="./asset/image/tag-icon.png" class="tag-icon"></p>
@@ -147,7 +152,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-md-3">
                 <div class="card" data-aos="flip-left">
                   <div class="card-body mx-2 mt-2">
                     <p><img src="./asset/image/time-icon.png" class="time-icon"></p>
@@ -156,7 +161,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-md-3">
                 <div class="card" data-aos="flip-left">
                   <div class="card-body mx-2 mt-2">
                     <p><img src="./asset/image/award-icon.png" class="award-icon"></p>
@@ -184,10 +189,30 @@
           <div class="owl-carousel owl-theme">
             <div class="item">
               <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-2">
-                  <img src="./asset/image/cat1.webp" class="testimonial-image">
+                <div class="col-12 col-md-2">
+                  <img src="./asset/image/cat1.webp" class="rounded-circle testimonial-image">
                 </div>
-                <div class="col">
+                <div class="col-md-10 d-flex flex-column">
+                  <div class="star">
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                    <span class="star">&#9733;</span>
+                  </div>
+                  <p class="text-l-14">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod”</p>
+                  <p class="text-r-14">John Dee 32, Bromo</p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-md-2 d-flex align-items-center justify-content-center">
+                  <img src="./asset/image/cat2.jpg" class="rounded-circle testimonial-image">
+                </div>
+                <div class="col-md-10 d-flex flex-column">
                   <div class="star">
                     <span class="star">&#9733;</span>
                     <span class="star">&#9733;</span>
@@ -205,29 +230,9 @@
             <div class="item">
               <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-2">
-                  <img src="./asset/image/cat2.jpg" class="testimonial-image">
+                  <img src="./asset/image/cat3.jpeg" class="rounded-circle testimonial-image">
                 </div>
-                <div class="col">
-                  <div class="star">
-                    <span class="star">&#9733;</span>
-                    <span class="star">&#9733;</span>
-                    <span class="star">&#9733;</span>
-                    <span class="star">&#9733;</span>
-                    <span class="star">&#9733;</span>
-                  </div>
-                  <p class="text-l-14">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem
-                    ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod”</p>
-                  <p class="text-r-14">John Dee 32, Bromo</p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-2">
-                  <img src="./asset/image/cat3.jpeg" class="testimonial-image">
-                </div>
-                <div class="col">
+                <div class="col-md-10 d-flex flex-column">
                   <div class="star">
                     <span class="star">&#9733;</span>
                     <span class="star">&#9733;</span>
@@ -257,11 +262,10 @@
       </section>
 
       <section id="banner" class="mx-14">
-        <div class="container-fluid ">
+        <div class="container-fluid px-5">
           <div class="row justify-content-center">
-            <div class="col "></div>
             <p class="text-b-36 text-center mb-0">Sewa Mobil di (Lokasimu) Sekarang</p>
-            <p class="text-l-14 text-center mt-2 p2_banner">
+            <p class="text-l-14 text-center mt-2">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             </p>
             <button type="button" class="btn btn-register text-b-14 mt-4">Mulai Sewa Mobil</button>
@@ -269,7 +273,7 @@
         </div>
       </section>
 
-      <section id="faq" class="mx-14">
+      <!-- <section id="faq" class="mx-14">
         <div class="container-fluid">
           <div class="row">
             <div class="col-5">
@@ -398,7 +402,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
 
 <script src="./asset/js/bootstrap.bundle.min.js"
