--- a/test.html
+++ b/test.html
@@ -1,36 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feather Icons with Bootstrap</title>
-  <!-- Link to Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Link to Feather Icons CSS (CDN) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.css">
-  <style>
-    .check-icon {
-      color: green;
-      background-color: lightpink;
-      border-radius: 100%;
-      padding: 3px;
-      margin-right: 10px;
-    }
-    .test {
-    display: flex;
-    align-items: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Positioning Example</title>
+    <link href="./asset/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="home.css">
+    <style>
+      * {
+  padding: 0;
+  margin: 0;
+}
+.container {
+  width: 100%;
+}
+
+.header {
+  background: lightblue;
+  padding: 10px;
+}
+
+.content {
+  height: 2000px; /* Large height to enable scrolling */
+  position: relative; /* Context for the sticky-sidebar */
+}
+
+.sticky-sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 20px; /* Distance from the top of the viewport */
+  background: lightgreen;
+  padding: 10px;
+  width: 200px;
+  float: right;
+}
+
+.test {
+height: 1000px;
+}
+
+
+    </style>
 </head>
 <body>
-  <!-- Example using a check icon -->
-  <div class="container">
-    <h1>Feather Icons with Bootstrap</h1>
-    <p class="test"><i data-feather="check" class="check-icon"></i> This is a check icon using Feather Icons with Bootstrap.</p>
-  </div>
-
-  <!-- Load Feather Icons script -->
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-  <script>feather.replace();</script>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <!-- Navbar content -->
+      <a class="navbar-brand" href="#">MyWebsite</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <!-- The ms-auto class is used here to push the Contact link to the right -->
+          <li class="nav-item ms-auto">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  
 </body>
 </html>
+
