--- a/home.html
+++ b/home.html
@@ -273,14 +273,14 @@
         </div>
       </section>
 
-      <!-- <section id="faq" class="mx-14">
+      <section id="faq" class="mx-14">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-5">
+            <div class="col-md-5 d-flex flex-column faq-left">
               <p class="text-b-24">Frequently Asked Question</p>
               <p class="text-l-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             </div>
-            <div class="col-7">
+            <div class="col-md-7">
               <div class="accordion">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
@@ -381,28 +381,28 @@
       <section id="footer" class="mx-14">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-3">
+            <div class="col-md-3">
               <p class="text-l-14">Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</p>
               <p class="text-l-14">binarcarrental@gmail.com</p>
               <p class="text-l-14">081-233-334-808</p>
             </div>
-            <div class="col-2 px-5">
+            <div class="col-md-2 footer-2">
               <p class="text-l-14">Our Services</p>
               <p class="text-l-14">Why Us</p>
               <p class="text-l-14">Testimonial</p>
               <p class="text-l-14">FAQ</p>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="text-l-14">Connect with us</p>
               <img src="./asset/image/list item.png" alt="">
             </div>
-            <div class="col-3">
+            <div class="col-md-3 footer-4">
               <p class="text-l-14">Copyright Binar 2022</p>
               <img src="./asset/image/logo.png">
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
 
 <script src="./asset/js/bootstrap.bundle.min.js"
