--- a/home.html
+++ b/home.html
@@ -7,12 +7,13 @@
   <meta name="author" content="Andika Tirta">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-5" rel="stylesheet">
   <!-- Online Bootstrap -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- Offline Bootstrap -->
-  <link href="./asset/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- <link href="./asset/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+
   <link rel="stylesheet" href="home.css">
+
   <!-- owl carousel CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
@@ -49,7 +50,7 @@
           aria-controls="offcanvasRight" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end custom-offcanvas" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas offcanvas-end w-50" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
           <div class="offcanvas-header d-md-none">
             <h5 class="offcanvas-title" id="offcanvasRightLabel">BCR</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -190,7 +191,7 @@
             <div class="item">
               <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-12 col-md-2">
-                  <img src="./asset/image/cat1.webp" class="rounded-circle testimonial-image">
+                  <img src="./asset/image/cat1.svg" class="testimonial-image">
                 </div>
                 <div class="col-md-10 d-flex flex-column">
                   <div class="star">
@@ -210,7 +211,7 @@
             <div class="item">
               <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-2 d-flex align-items-center justify-content-center">
-                  <img src="./asset/image/cat2.jpg" class="rounded-circle testimonial-image">
+                  <img src="./asset/image/cat2.svg" class="testimonial-image">
                 </div>
                 <div class="col-md-10 d-flex flex-column">
                   <div class="star">
@@ -230,7 +231,7 @@
             <div class="item">
               <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-2">
-                  <img src="./asset/image/cat3.jpeg" class="rounded-circle testimonial-image">
+                  <img src="./asset/image/cat3.svg" class="testimonial-image">
                 </div>
                 <div class="col-md-10 d-flex flex-column">
                   <div class="star">
@@ -405,9 +406,12 @@
       </section>
 
 
-<script src="./asset/js/bootstrap.bundle.min.js"
+<!-- <script src="./asset/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-</script>
+</script> -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 <!-- jquery --> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script> 
