fix offcanvas header position to match figma design

--- a/home.html
+++ b/home.html
@@ -52,8 +52,8 @@
         </button>
         <div class="offcanvas offcanvas-end w-50" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
           <div class="offcanvas-header d-md-none">
-            <h5 class="offcanvas-title" id="offcanvasRightLabel">BCR</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <p class="offcanvas-title text-b-16 offcanvas-logo" id="offcanvasRightLabel">BCR</p>
+            <button type="button" class="btn offcanvas-btn-close ms-auto" data-bs-dismiss="offcanvas" aria-label="Close"><i data-feather="x" class="x-icon"></i></button>
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto gap-2">
