Restoring folder level error

--- a/javascript-array-challenge-main/index.html
+++ b/javascript-array-challenge-main/index.html
@@ -10,9 +10,9 @@
   <script src="https://code.jquery.com/qunit/qunit-2.20.1.js"></script>
 
   <!-- Sort Function: Javascript Source Code -->
-  <script src="scriptsilterCarByAvailability.js"></script>
-  <script src="scriptsortCarByYearAscendingly.js"></script>
-  <script src="scriptsortCarByYearDecendingly.js"></script>
+  <script src="./scripts/filterCarByAvailability.js"></script>
+  <script src="./scripts/sortCarByYearAscendingly.js"></script>
+  <script src="./scripts/sortCarByYearDecendingly.js"></script>
 
   <!-- DON'T TOUCH -->
   <script
